generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_interface_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
interface TestInterface { prop: number; method2(): void; }

AST:
(program
  (interface_declaration
    (type_identifier)
    (interface_body
      (property_signature
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
      )
      (method_signature
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestInterface",
            line_number: 1,
            definition_type: InterfaceDefinition,
            scope: Some(
                "TestInterface",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
