generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_jsx_opening_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component1 prop2={value15}></Component1>

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier Component1)
          (jsx_attribute
            (property_identifier)
            (jsx_expression
              (identifier value15)
            )
          )
        )
        (jsx_closing_element
          (identifier Component1)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
