generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_new_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
new TestClass2(arg)

AST:
(program
  (expression_statement
    (new_expression
      (identifier TestClass2)
      (arguments
        (identifier arg)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "TestClass2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 15,
        },
        SerializableUsage {
            name: "arg",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 16,
            end_line: 1,
            end_column: 19,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
